# AutoCAD-MCP

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/design/: architecture.md
docs/logs/: devlog.md
docs/references/: cad-mcp-analysis.md
scripts/: build_training_dataset.py  fill_missing_fonts.py
src/autocad_mcp/: config.json  config.py  reference_drawings.json  server.py  state.py  symbol_library.json
src/autocad_mcp/cad/: connection.py  controller.py  geometry.py  query.py  reference_library.py  symbol_library.py  training_export.py
src/autocad_mcp/tools/: document_tools.py  drawing_tools.py  query_tools.py  reference_tools.py  vqa_tools.py
tests/: conftest.py  test_connection.py  test_controller.py  test_document.py  test_query.py  test_reference_library.py  test_server_registration.py  test_symbol_library.py  test_training_export.py
web/backend/: agent_loop.py  app.py  conversation_store.py  mcp_client.py
web/backend/providers/: anthropic_provider.py  base.py  doubao_provider.py  openai_provider.py
web/frontend/: app.js  index.html
