[project]
name = "autocad-mcp"
version = "0.1.0"
description = "MCP server that controls AutoCAD via COM automation"
requires-python = ">=3.11"
dependencies = [
    "pywin32",
    "mcp[cli]",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest"]
web = ["anthropic", "openai", "fastapi", "uvicorn[standard]", "volcengine-python-sdk[ark]"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
